@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-01T01:03:22Z",
-  "count_outdated" : 141,
-  "uniques_outdated" : 52,
+  "timestamp" : "2022-12-02T16:13:52Z",
+  "count_outdated" : 142,
+  "uniques_outdated" : 53,
   "count" : 145,
   "uniques" : 55,
   "views" : [
-    {
-      "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-27T00:00:00Z",
       "count": 3,
