@@ -1,3 +1,11 @@
+2022-12-02T16:13:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3603282733 # 668
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 52 141 / 55 145
+* notice: next accum: outdated-unq outdated-all / unq all: 53 142 / 55 145
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-18] / []
+
 2022-12-01T01:03:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3588458121 # 663
 * notice: last 14d: unq all: 3 4
